--- a/index.html
+++ b/index.html
@@ -20,14 +20,22 @@
         <h1 class='mb-5 mt-2 text-white text-center'>TV Movies</h1>
         <form>
             <div class="row">
-                <div class="col-6">
+                <div class="col-3">
                     <select class="form-select mb-5 p-3 border-secondary border-1">
                         <option value="All">All</option>
                     </select>
                 </div>
+                <div class="col-3">
+                    <select class="form-sort form-select mb-5 p-3 border-secondary border-1">
+                        <option selected disabled>Sort by</option>
+                        <option value="all">All</option>
+                        <option value="a_z">a_Z</option>
+                        <option value="z_a">z_A</option>
+                    </select>
+                </div>
                 <div class="col-4">
-                    <input class="form-control p-3 border-secondary border-1 js_input" placeholder="Search films.." autofocus
-                        type="search">
+                    <input class="form-control p-3 border-secondary border-1 js_input" placeholder="Search films.."
+                        autofocus type="search">
                 </div>
                 <div class="col-2">
                     <button class="w-100 btn btn-danger p-3">Find</button>
