--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <div class="container">
-        <div class="bookmark-wrapper shadow-md">
+        <div class="bookmark-wrapper shadow-md p-3">
             <h1>Bookmarked lists <i class="fa-solid fa-bookmark"></i></h1>
             <ul class="list-group"></ul>
         </div>
@@ -49,7 +49,7 @@
                         autofocus type="search">
                 </div>
                 <div class="col-2">
-                    <button class="w-100 btn btn-danger p-3">Find</button>
+                    <button  class="w-100 btn btn-danger p-3">Find</button>
                 </div>
             </div>
         </form>
